--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,9 +43,9 @@ jobs:
           # Connection URL protocol://user:password@server:port, protocol can be smtp or smtp+starttls, replaces server_address, server_port, secure, username and password
           # connection_url: # optional
           # # SMTP server address
-          # server_address: # optional
+          server_address: "imap.gmail.com"
           # # SMTP server port
-          # server_port: # optional, default is 25
+          server_port: 993
           # # Whether this connection use TLS (default is true if server_port is 465)
           # secure: # optional
           # # Authenticate as this user to SMTP server
